--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Afstudeerscriptie Tomas Laar</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css" />
+
+        <title>Types met karakter, letterontwerp als vorm van visuele expressie | Afstudeerscriptie Tomas Laar</title><!-- The title that appears in a bookmark. You can also add your name, like: “Title – Author” -->
+        <meta name="description" content="Type design as a form of visual expression. Type is something that we are confronted with every day. The written word is everywhere and opens the world for us. Typography is a servant to help us communicate content embracing a vast range of topics. However, the visual details of type have an impact far beyond the content of the text. The aesthetic qualities of a typeface can be achieved by a harmonious relationship between form, content and purpose. Type design is a very specialized discipline, that focuses on designing type. The design of a typeface could be defined as being a thorough search for the right form in order to transmit textual but also visual messages." /><!-- Description. Used a.o. by Facebook -->
+        <meta property="og:title" content="Types met karakter, letterontwerp als vorm van visuele expressie" /><!-- The title that appears on Facebook-->
+        <meta property="dc:title" content="Types met karakter, letterontwerp als vorm van visuele expressie" /><!-- Specify the title with the Dublin Core Metadata standard for archival purposes-->
+        <meta property="dc:creator" content="Tomas Laar" /><!-- Specify the author with the Dublin Core Metadata standard for archival purposes-->
 
 
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
