--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta property="og:title" content="Types met karakter, letterontwerp als vorm van visuele expressie" /><!-- The title that appears on Facebook-->
         <meta property="dc:title" content="Types met karakter, letterontwerp als vorm van visuele expressie" /><!-- Specify the title with the Dublin Core Metadata standard for archival purposes-->
         <meta property="dc:creator" content="Tomas Laar" /><!-- Specify the author with the Dublin Core Metadata standard for archival purposes-->
+        <meta property="og:image" content="http://kabk.github.io/govt-theses-15/images/screenshots/govt-theses-15-tomas-laar-types-with-character.png" />
 
 
         <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
